--- a/Cocoon/Views/SubCategories/View.cshtml
+++ b/Cocoon/Views/SubCategories/View.cshtml
@@ -81,13 +81,13 @@
                     </div>
                 </div>
                 <div class="pt-3 pt-xl-0 pt-md-0 pt-sm-0 col-sm-12 col-md-8 col-lg-10">
-                    <div class="card wow fadeInDown">
+                    <div class="card wow fadeInDown" style="background-color: #292929;" >
                         <div class="card-header">
                             <h2 class="h5 text-right">
                                 <span>
-                                    <i class="fas fa-star"></i>
+                                    @*<i class="fas fa-star"></i>*@
                                     <span>@(culture == "ar" ? Model.NameAr : Model.NameEn)</span>
-                                    <i class="fas fa-people-carry"></i>
+                                    @*<i class="fas fa-people-carry"></i>*@
                                 </span>
                             </h2>
                         </div>
