--- a/Cocoon/Content/web/css/main.css
+++ b/Cocoon/Content/web/css/main.css
@@ -6,7 +6,8 @@ body {
     font-family: 'Tajawal', "cairo", sans-serif;
     /*background-image: url('../img/logo/bg3.jpeg');*/
     /*background-color: #fefefc;*/
-    color: #1a1a1a
+    background-color: #292929;
+    color: #fff
 }
 
 hr {
@@ -14,7 +15,7 @@ hr {
 }
 
 h2 span {
-    background-color: #000;
+    /*background-color: #000;*/
     color: #FFF;
     display: inline-block;
     padding: 5px 10px;
@@ -852,10 +853,10 @@ h2 span {
     }
 
 footer {
-    background-color: #f5f5f5;
-    /*background-color: #000;*/
-    color: #4a4a4a;
-    /*color: #FFF;*/
+    /*background-color: #f5f5f5;*/
+    background-color: #292929;
+    /*color: #4a4a4a;*/
+    color: #FFF;
     /*-webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);
     clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);*/
     padding: 20px 0 10px
@@ -978,7 +979,7 @@ input[type=number] {
 }
 
 .text-black {
-    color: black
+    color: white
 }
 
 .fa-cart-plus {
@@ -1317,7 +1318,8 @@ input[type=number] {
         outline: 0;
         display: block;
         border: none;
-        background-color: #f8f8f8;
+        background-color: #454b51;
+        border-radius: 10px;
         text-align: center;
         width: 100%;
         font-size: 17px;
@@ -1912,3 +1914,9 @@ input[type=number] {
         background-color: #6d5008;
         border-color: #6d5008;
     }
+
+@media screen and (max-width:600px) {
+    .SliderImage {
+        object-fit: contain;
+    }
+}
