--- a/Cocoon/Views/Account/Register.cshtml
+++ b/Cocoon/Views/Account/Register.cshtml
@@ -29,7 +29,7 @@
                                     </div>
                                     <div class="form-group">
                                         @Html.TextBoxFor(s => s.IDNumber, new { @class = "form-control text-center", placeholder = Website.IDNumberPlaceholder })<i class="fa fa-id-card fa-fw"></i>
-                                        @Html.ValidationMessageFor(s => s.IDNumber, "", new { @class = "text-danger" })
+                                        @*@Html.ValidationMessageFor(s => s.IDNumber, "", new { @class = "text-danger" })*@
                                     </div>
                                     <div class="form-group">
                                         <div class="row">
