--- a/Cocoon/Views/Orders/Cart.cshtml
+++ b/Cocoon/Views/Orders/Cart.cshtml
@@ -48,7 +48,7 @@
         <div class="cart_items wow fadeInDown">
             <div class="container">
                 <div class="table-responsive">
-                    <table class="table table-bordered table-striped text-center">
+                    <table class="table table-bordered table-striped text-center" style=" color:white;">
                         <thead class="bg-dark">
                             <tr>
                                 <td></td>
@@ -76,7 +76,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-5">
                         <div class="table-responsive wow fadeInRight">
-                            <table class="table table-bordered table-striped text-center">
+                            <table class="table table-bordered table-striped text-center" style=" color:white;">
                                 <tbody>
                                     <tr>
                                         <td>@(culture == "ar" ? "كوبون الخصم" : "Coupon")</td>
@@ -88,7 +88,7 @@
                                     <td style="background-color:white;" colspan="1" align="right" id="remove-coupon-btn" class="@(Model.PromoId.HasValue == false ? "d-none" : "")"><a class="btn btn-danger btn-block" href="javascript:void(0)" onclick="RemoveCoupoun()">@(culture == "ar" ? "الغاء" : "Remove")</a></td>
                                 </tr>
                             </table>
-                            <table class="table table-bordered table-striped text-center">
+                            <table class="table table-bordered table-striped text-center" style=" color:white;">
                                 <tbody id="order-fees-container">
                                     @Html.Partial("_OrderFees", Model)
                                 <tbody />
@@ -119,7 +119,7 @@
                     @if (SuggestedServices != null && SuggestedServices.Count() > 0)
                     {
                         <div class="col-sm-12 col-md-7 mb-3">
-                            <div class="card text-right wow fadeInLeft">
+                            <div class="card text-right wow fadeInLeft" style="background-color: #292929;">
                                 <div class="card-header"><span>@(culture == "ar" ? "خدمات مشابهة قد تعجبك" : "Our Suggestions")</span></div>
                                 <div class="card-body d-flex">
                                     @foreach (var Service in SuggestedServices)
@@ -131,7 +131,7 @@
                                         }
                                         <div class="suggest_item text-center">
                                             <a style="font-weight:100" href="@Url.Action("View", "Services", new { Id = Service.Id })"><img src="@(ServiceImage != null ? "/Content/Images/Services/" + ServiceImage : "/Content/assets/imgs/doesnotexist.png")" class="rounded-circle" width="100%" height="100"></a>
-                                            <h6 style="max-height:50px"><a style="font-weight:100;overflow:hidden" href="@Url.Action("View", "Services", new { Id = Service.Id })">@(culture == "ar" ? Service.NameAr : Service.DescriptionEn)</a></h6>
+                                            <h6 style="max-height:50px"><a style="font-weight:100;overflow:hidden" href="@Url.Action("View", "Services", new { Id = Service.Id })">@(culture == "ar" ? Service.NameAr : Service.NameEn)</a></h6>
                                         </div>
                                     }
                                 </div>
@@ -211,7 +211,7 @@
             </div>
         }
     }
-    }
+   
 
 </section>
 @section Scripts{
