--- a/Cocoon/Views/Orders/Checkout.cshtml
+++ b/Cocoon/Views/Orders/Checkout.cshtml
@@ -24,7 +24,7 @@
         </p>
     }
 
-    <div class="card text-center">
+    <div class="card text-center" style="background-color: #292929;" >
         <div class="card-header font-weight-bold text-white" style="background:black;">
             @(culture == "ar" ? "اتمام عمليه الشراء" : "Checkout")
         </div>
