--- a/Cocoon/Views/Services/View.cshtml
+++ b/Cocoon/Views/Services/View.cshtml
@@ -61,14 +61,14 @@
         <div class="col-xs-12 col-md-12 text-center m-auto">
             <hr style="margin:40px 0px" />
             <div class="mb-3 pb-3">
-                <div class="Service-details__hot">
+                @*<div class="Service-details__hot">
                     <h4>
                         <strong><i class="fa fa-star" style="color:gold"></i> @(culture == "ar" ? "اختيار الكمية والالوان والمقاسات" : "Choose quantity, color and size") <i class="fa fa-star" style="color:gold"></i></strong>
                     </h4>
-                </div>
+                </div>*@
                 <div class="col-lg-12 col-md-12 text-center m-auto">
                     <div class="Services-details-desc">
-                        <div class="Services-color-switch">
+                        @*<div class="Services-color-switch">
                             <span><strong>@Website.Color</strong></span>
                             @if (Model.Colors.Any(s => s.IsDeleted == false))
                             {
@@ -101,7 +101,7 @@
                                 <p><strong>@(culture == "ar" ? "لا توجد احجام متاحه لهذا الخدمه" : "No sizes available for this Service")</strong></p>
                             }
                         </div>
-                        <br />
+                        <br />*@
                         <div class="Services-add-to-cart">
                             <strong>@Website.Quantity</strong>
                             <div class="input-counter">
